<?xml version="1.0"?>
<package format="2">
  <name>icm20948_demo</name>
  <version>0.1.0</version>
  <description>A ROS package for interfacing with the ICM20948 IMU sensor.</description>

  <!-- Maintainer details -->
  <maintainer email="your_email@gmail.com">Your Name</maintainer>

  <!-- License information -->
  <license>BSD</license>

  <!-- Author information -->
  <author email="your_email@example.com">Your Name</author>

  <!-- URL information for the package -->
  <url type="website">http://example.com/icm20948_demo</url>
  <url type="repository">http://github.com/yourusername/icm20948_demo</url>
  <url type="bugtracker">http://github.com/yourusername/icm20948_demo/issues</url>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
